@startuml
skinparam classAttributeIconSize 0

class CreateSkillController {
    +createSkill(name)
}


class CreateSkillUI {

}

class Skill
 {
    +String name

 }
 class Repositories {
     - Repositories()
     + getInstance() : Repositories
     + getSkillRepository();
 }

 class SkillRepository {
     + getSkillsList()
 }
CreateSkillUI ..> CreateSkillController: inputs wanted data
CreateSkillController ..> Repositories : inserts skill in the repository
Repositories ..> SkillRepository : Have
SkillRepository ..> Skill : Have
Skill ..> CreateSkillController : will be inserted

@enduml